--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
       <div class="pure-u-1-2">
         <div class="description description-left">
           <h2>Two Columns Layout</h2>
-          <p>The first column contains text and the second column contains a visualisation.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+          <p>
+            Big variations in production can be seen across countries, and even within a country between time periods. Many factors may incfluence this, such as demand, pricing, production capacity, and other market tactics.
+          </p>
         </div>
       </div>
       <div class="pure-u-1-2">
@@ -75,45 +74,6 @@
       </div>
     </div>
     <!-- end pure grid group -->
-
-
-    <!-- pure grid group -->
-    <div class="pure-g">
-      <div class="pure-u-1-3">
-        <div class="description description-left">
-          <h2>Three Equal Columns</h2>
-          <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat
-            sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.</p>
-        </div>
-      </div>
-      <div class="pure-u-1-3">
-        <div id="vis4" class="vis-container"></div>
-      </div>
-      <div class="pure-u-1-3" style="width: 31.5%;">
-        <div id="vis3" class="vis-container" style="margin-left: 15px;"></div>
-      </div>
-
-    </div>
-    <!-- end pure grid group -->
-
-    <!-- pure grid group -->
-    <div class="pure-g">
-      <div class="pure-u-2-3">
-        <div id="vis2" class="vis-container"></div>
-      </div>
-      <div class="pure-u-1-3">
-        <div class="description description-right">
-          <h2>First and Second Columns Combined</h2>
-          <p>The first and second columns are combined. Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien
-            faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
-        </div>
-      </div>
-
-    </div>
-    <!-- end pure grid group -->
-
 
  <div class="pure-g">
       <div class="pure-u-1-1">
@@ -121,6 +81,35 @@
       </div>
     </div>
 
+        <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-1-3">
+        <div class="description description-left">
+          <h2>Key Producers and Consumers</h2>
+          <p>The oil market has been diversified by more players over time. Historically, much of the world's production and consumption has been led by a few key market players. Countries with strong economies. As the world has modernised, with many countries developing their own industry and economies, production and consumption has been more evenly split between more countries.</p>
+        </div>
+      </div>
+      <div class="pure-u-2-3">
+        <div id="vis7" class="vis-container"></div>
+      </div>
+    </div>
+    <!-- end pure grid group -->
+
+
+    <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-1-2"  style="width: 31.5%;">
+        <div class="description description-left">
+          <h2>Net Importers vs. Net Exporters</h2>
+          <p> To the right we see a log-log representation of production vs. consumption of oil. Countries below the line are net importers, while countries above the line are net exporters. European countries are generally net importers, while many Asian countries, particularly those in the Middle East, are net exporters.
+             </p>
+        </div>
+      </div>
+      <div class="pure-u-1-2">
+        <div id="vis8" class="vis-container"></div>
+      </div>
+    </div>
+    <!-- end pure grid group -->
 
 <!-- pure grid group -->
     <div class="pure-g">
@@ -137,42 +126,14 @@
 
     </div>
     <!-- end pure grid group -->
-
-    <!-- pure grid group -->
-    <div class="pure-g">
-      <div class="pure-u-1-2">
-        <div class="description description-left">
-          <h2>Two Columns Layout</h2>
-          <p>The oil market has been diversified by more players over time. Historically, much of the world's production and consumption has been led by a few key market players. Countries with strong economies. As the world has modernised, with many countries developing their own industry and economies, production and consumption has been more evenly split between more countries.</p>
-        </div>
-      </div>
-      <div class="pure-u-1-2">
-        <div id="vis7" class="vis-container"></div>
-      </div>
-    </div>
-    <!-- end pure grid group -->
+     
 
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-2"  style="width: 31.5%;">
         <div class="description description-left">
-          <h2>Net Importers vs. Net Exporters</h2>
-          <p> To the right we see a log-log representation of production vs. consumption of oil. Countries below the line are net importers, while countries above the line are net exporters 
-             </p>
-        </div>
-      </div>
-      <div class="pure-u-1-2">
-        <div id="vis8" class="vis-container"></div>
-      </div>
-    </div>
-    <!-- end pure grid group -->
-
-    <!-- pure grid group -->
-    <div class="pure-g">
-      <div class="pure-u-1-2"  style="width: 31.5%;">
-        <div class="description description-left">
-          <h2>Relationship between Price and Production</h2>
-          <p>  
+          <h2>Further Exploration of Price and Production</h2>
+          <p> Here we can see a more detailed breakdown for the correlation between production and pricing. We can see how this applies to individual countries. Any directional pattern between the light and dark coloured dots on the right indicates a relationship between price and oil production.
              </p>
         </div>
       </div>
