--- a/index.html
+++ b/index.html
@@ -21,6 +21,27 @@
   <!-- CSS file -->
   <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
 
+  <style>
+    .centered-content {
+      max-width: 1200px;
+      margin: 0 auto;
+      text-align: center;
+    }
+    .vis-container {
+      margin: 20px 0;
+    }
+    .description-centered {
+      text-align: left;
+      padding: 20px 30px;
+    }
+    .description-centered h2 {
+      margin-top: 0;
+      margin-bottom: 15px;
+    }
+    .description-centered p {
+      line-height: 1.6;
+    }
+  </style>
 
 </head>
 
@@ -30,114 +51,122 @@
 
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-1-1">
+      <div class="pure-u-1-1 centered-content">
         <h1>Trends in Production and Consumption of Oil, with Price Factors</h1>
-        <p>A Deep dive into the demographics of oil production and consumption.</p>
+        <p>A Deep dive into the demographics of oil production and consumption. An essential commodity, a driving force behind many economies.</p>
       </div>
     </div>
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-1-1">
-        <h1>Multiple Visualisations</h1>
-        <p>How much energy is 1 TWh of oil?
-          1.6 million barrels approximately. Enough to fill 102 olympic size swimming pools. More than Australia's daily 1.1 million barrel consumption of oil.
-          
-        </p>
-      </div>
-    </div>
-    <!-- end pure grid group -->
-
-
-
-    <!-- pure grid group -->
-    <div class="pure-g">
-      <div class="pure-u-1-2">
-        <div class="description description-left">
-          <h2>Two Columns Layout</h2>
+      <div class="pure-u-1-4">
+        <div class="description-centered">
+          <h2>Energy Context</h2>
+          <p>How much energy is 1 TWh of oil? 1.6 million barrels approximately. Enough to fill 102 olympic size swimming pools. More than Australia's daily 1.1 million barrel consumption of oil.</p>
+          <h2>Production Variations Across Countries</h2>
           <p>
-            Big variations in production can be seen across countries, and even within a country between time periods. Many factors may incfluence this, such as demand, pricing, production capacity, and other market tactics.
+            Big variations in production can be seen across countries, and even within a country between time periods. Many factors may influence this, such as demand, pricing, production capacity, and other market tactics.
           </p>
         </div>
       </div>
-      <div class="pure-u-1-2">
+
+      <div class="pure-u-3-4">
         <div id="vis1" class="vis-container"></div>
       </div>
     </div>
     <!-- end pure grid group -->
 
-    <!-- pure grid group -->
+    <!-- Visualization 4 -->
     <div class="pure-g">
-      <div class="pure-u-1-2">
+      <div class="pure-u-1-4">
+        <div class="description-centered">
+          <h2>Global Distribution Over Time</h2>
+          <p>Global oil production appears to be concentrated in a few key countries in earlier years, diversifying in the later years. Key players across time include the United States, Saudi Arabia and Russia.</p>
+
+          <p>Data is missing for several countries from 2016 - 2024, hence the grey patches</p>
+        </div>
+      </div>
+      <div class="pure-u-3-4">
         <div id="vis4" class="vis-container"></div>
       </div>
     </div>
     <!-- end pure grid group -->
 
- <div class="pure-g">
-      <div class="pure-u-1-1">
-        <div id="vis1" class="vis-container"></div>
-      </div>
-    </div>
-
-        <!-- pure grid group -->
+    <!-- Visualization 7 -->
     <div class="pure-g">
-      <div class="pure-u-1-3">
-        <div class="description description-left">
+      <div class="pure-u-1-4">
+        <div class="description-centered">
           <h2>Key Producers and Consumers</h2>
-          <p>The oil market has been diversified by more players over time. Historically, much of the world's production and consumption has been led by a few key market players. Countries with strong economies. As the world has modernised, with many countries developing their own industry and economies, production and consumption has been more evenly split between more countries.</p>
+          <p>The oil market has been diversified by more players over time. Historically, much of the world's production and consumption has been led by a few key market players with strong economies. As the world has modernised, production and consumption has been more evenly split between more countries.</p>
         </div>
       </div>
-      <div class="pure-u-2-3">
+
+      <div class="pure-u-3-4">
         <div id="vis7" class="vis-container"></div>
       </div>
     </div>
     <!-- end pure grid group -->
 
-
-    <!-- pure grid group -->
+    <!-- Visualization 10 -->
     <div class="pure-g">
-      <div class="pure-u-1-2"  style="width: 31.5%;">
-        <div class="description description-left">
-          <h2>Net Importers vs. Net Exporters</h2>
-          <p> To the right we see a log-log representation of production vs. consumption of oil. Countries below the line are net importers, while countries above the line are net exporters. European countries are generally net importers, while many Asian countries, particularly those in the Middle East, are net exporters.
-             </p>
+      <div class="pure-u-1-4">
+        <div class="description-centered">
+          <h2>Price and Production by Country</h2>
+          <p>Select a time range on the right to show absolute production for given period.
+</p>
+
+<p>
+            North America was consistently a top producer in the early 1900s, leading the world in the adoption of the automobile. Industrial output during the conflicts following would have also maintained this demand. However, as oil became a commodity sought by all, it's production was increased around the world.
+          </p>
         </div>
       </div>
-      <div class="pure-u-1-2">
+      <div class="pure-u-3-4">
+        <div id="vis10" class="vis-container"></div>
+      </div>
+    </div>
+    <!-- end pure grid group -->
+
+    <!-- Visualization 8 -->
+    <div class="pure-g">
+      <div class="pure-u-1-4">
+        <div class="description-centered">
+          <h2>Net Importers vs. Net Exporters</h2>
+          <p>A log-log representation of production vs. consumption of oil. Countries below the line are net importers, while countries above the line are net exporters. European countries are generally net importers, while many Asian countries, particularly those in the Middle East, are net exporters.</p>
+        </div>
+      </div>
+      <div class="pure-u-3-4">
         <div id="vis8" class="vis-container"></div>
       </div>
     </div>
     <!-- end pure grid group -->
 
-<!-- pure grid group -->
+    <!-- Visualization 6 -->
     <div class="pure-g">
-      <div class="pure-u-1-3">
-        <div class="description description-left">
-          <h2>The Connection between Oil Prices and Production</h2>
-          <p>The Relationship between oil price and production is such that small overall changes in production create big fluctuations in price. This may be explained by the world's relatively inelastic demand for petroleum products, meaning small fluctuations in production can have larger impacts on price.</p>
+      <div class="pure-u-1-4">
+        <div class="description-centered">
+          <h2>Oil Prices and Production Connection</h2>
+          <p>The relationship between oil price and production is such that small overall changes in production create big fluctuations in price. This may be explained by the world's relatively inelastic demand for petroleum products, meaning small fluctuations in production can have larger impacts on price.</p>
         </div>
       </div>
-      <div class="pure-u-1-2">
+      <div class="pure-u-3-4">
         <div id="vis6" class="vis-container"></div>
       </div>
-
-
     </div>
     <!-- end pure grid group -->
-     
 
-    <!-- pure grid group -->
+    <!-- Visualization 9 -->
     <div class="pure-g">
-      <div class="pure-u-1-2"  style="width: 31.5%;">
-        <div class="description description-left">
-          <h2>Further Exploration of Price and Production</h2>
-          <p> Here we can see a more detailed breakdown for the correlation between production and pricing. We can see how this applies to individual countries. Any directional pattern between the light and dark coloured dots on the right indicates a relationship between price and oil production.
-             </p>
+      <div class="pure-u-1-4">
+        <div class="description-centered">
+          <h2>Price and Production by Country</h2>
+          <p>A more detailed breakdown for the correlation between production and pricing by individual country. Any directional pattern between the light and dark coloured dots indicates a relationship between price and oil production for that country.
+          </p>
+
+          <p>While this information may be useful, it is difficult to tell which element is the key driver of change. There are a plethora of other variables to be considered, such as geopolitics, conflicts, a</p>
         </div>
       </div>
-      <div class="pure-u-1-2">
+      <div class="pure-u-3-4">
         <div id="vis9" class="vis-container"></div>
       </div>
     </div>
@@ -146,8 +175,8 @@
 
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
-        <p>This visualisation is created by <a href="https://github.com/Martin-G123/3179" target="_blank">Martin G</a>. 
-          The data is sourced from Our World in Data oil <a href="https://ourworldindata.org/grapher/oil-production-by-country" target=" _blank">production</a> and <a href="https://ourworldindata.org/grapher/oil-consumption-by-country" target=" _blank">consumption</a> datasets.</p>  Additional pricing data for Brent Crude is sourced from <a href="https://www.statista.com/statistics/262860/uk-brent-crude-oil-price-changes-since-1976/">Statista</a>.</p></p>
+        <p style="text-align: center;">This visualisation is created by <a href="https://github.com/Martin-G123/3179" target="_blank">Martin G</a>. 
+          The data is sourced from Our World in Data oil <a href="https://ourworldindata.org/grapher/oil-production-by-country" target=" _blank">production</a> and <a href="https://ourworldindata.org/grapher/oil-consumption-by-country" target=" _blank">consumption</a> datasets. Additional pricing data for Brent Crude is sourced from <a href="https://www.statista.com/statistics/262860/uk-brent-crude-oil-price-changes-since-1976/">Statista</a>.</p>
       </div>
     </div>
 
@@ -164,6 +193,7 @@
     var specVis7 = "js/biggest_producers_bar.json"
     var specVis8 = "js/scatter_prod_cons_countries.json"
     var specVis9 = "js/price_to_production.json"
+    var specVis10 = "js/dotplot.json"
 
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
@@ -199,6 +229,11 @@
     vegaEmbed('#vis9', specVis9, { "actions": false }).then(function (result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
+
+    vegaEmbed('#vis10', specVis10, { "actions": false }).then(function (result) {
+      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+    }).catch(console.error);
+
 
 
   </script>
