--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="pure-g">
       <div class="pure-u-1-1 centered-content">
         <h1>Trends in Production and Consumption of Oil, with Price Factors</h1>
-        <p>A Deep dive into the demographics of oil production and consumption. An essential commodity, a driving force behind many economies.</p>
+        <p>A deep dive into the demographics of oil production and consumption. An essential commodity, a driving force behind many economies.</p>
       </div>
     </div>
     <!-- end pure grid group -->
@@ -63,10 +63,14 @@
       <div class="pure-u-1-4">
         <div class="description-centered">
           <h2>Energy Context</h2>
-          <p>How much energy is 1 TWh of oil? 1.6 million barrels approximately. Enough to fill 102 olympic size swimming pools. More than Australia's daily 1.1 million barrel consumption of oil.</p>
+          <p>How much energy is 1 TWh of oil? 1.6 million barrels approximately. Enough to fill 102 olympic size swimming pools. More than Australia's daily 1.1 million barrel consumption of oil. 1 barrel of oil &asymp; 159L.</p>
           <h2>Production Variations Across Countries</h2>
           <p>
             Big variations in production can be seen across countries, and even within a country between time periods. Many factors may influence this, such as demand, pricing, production capacity, and other market tactics.
+          </p>
+
+          <p>
+            Select up to five countries to the right to compare their oil production over time. Key producers of the United States, Saudi Arabia and Russia are shown for context.
           </p>
         </div>
       </div>
@@ -84,6 +88,14 @@
           <h2>Global Distribution Over Time</h2>
           <p>Global oil production appears to be concentrated in a few key countries in earlier years, diversifying in the later years. Key players across time include the United States, Saudi Arabia and Russia.</p>
 
+          <p>
+          European countries lag significantly in oil production, with a few key exceptions. Africa faces a similar situation, with just a handful of oil producers across the continent.
+          </p>
+
+          <p>
+            Overall, this shows how important the transport of oil is across the world. Many countries depend on it, but few countries produce it in large quantities. It lies as a major factor behind many conflicts due to it's importance.
+          </p>
+
           <p>Data is missing for several countries from 2016 - 2024, hence the grey patches</p>
         </div>
       </div>
@@ -98,7 +110,11 @@
       <div class="pure-u-1-4">
         <div class="description-centered">
           <h2>Key Producers and Consumers</h2>
-          <p>The oil market has been diversified by more players over time. Historically, much of the world's production and consumption has been led by a few key market players with strong economies. As the world has modernised, production and consumption has been more evenly split between more countries.</p>
+          <p>The oil market has been diversified by more players over time. Historically, much of the world's production and consumption has been led by a few key market players with strong economies.</p>
+          
+          <p>As the world has modernised, production and consumption has been more evenly split between more countries.</p>
+
+          <p>Drag the year slider to watch how production and consumption changes.</p>
         </div>
       </div>
 
@@ -113,11 +129,15 @@
       <div class="pure-u-1-4">
         <div class="description-centered">
           <h2>Price and Production by Country</h2>
-          <p>Select a time range on the right to show absolute production for given period.
+          <p>Drag to select a time range on the right to show absolute production for given period.
 </p>
 
 <p>
             North America was consistently a top producer in the early 1900s, leading the world in the adoption of the automobile. Industrial output during the conflicts following would have also maintained this demand. However, as oil became a commodity sought by all, it's production was increased around the world.
+          </p>
+
+          <p>
+            Oil production issues due to conflict in the Middle East in the early 1980s stimulated production in other economies, hence the spike and growth of other regions, particularly Europe.
           </p>
         </div>
       </div>
@@ -133,6 +153,13 @@
         <div class="description-centered">
           <h2>Net Importers vs. Net Exporters</h2>
           <p>A log-log representation of production vs. consumption of oil. Countries below the line are net importers, while countries above the line are net exporters. European countries are generally net importers, while many Asian countries, particularly those in the Middle East, are net exporters.</p>
+
+          <p>
+            There are many countries which import much more than they export, as a proportion. This is portrayed by the larger distribution spread of data below the dotted line.
+          </p>
+          <p>
+            Israel, Taiwan and Japan consistently import the highest proportion of oil compared to their production. While countries such as Oman, Qatar and Kuwait consistently export much more than they consume.
+          </p>
         </div>
       </div>
       <div class="pure-u-3-4">
@@ -147,6 +174,18 @@
         <div class="description-centered">
           <h2>Oil Prices and Production Connection</h2>
           <p>The relationship between oil price and production is such that small overall changes in production create big fluctuations in price. This may be explained by the world's relatively inelastic demand for petroleum products, meaning small fluctuations in production can have larger impacts on price.</p>
+
+          <p>Key events to notice in the pricing chart are; The Global Financial Crisis in 2007-09, resulting in a spike and crash; The 2020 pandemic, resulting in a large hike over growing uncertainty; The Iranian Revolution in the later 1970s, resulting in a sharp increase in price as production from the key producer was slashed.</p>
+
+          <p>
+            The oil price collapsed in 1986 due to long term over-supply and an increase in production from OPEC countries.
+          </p>
+
+          <p>
+            The 2014 oil price collapse was driven by the large uptake of fracking in the United States and an increase in production by OPEC in the same period.
+          </p>
+
+
         </div>
       </div>
       <div class="pure-u-3-4">
@@ -163,7 +202,11 @@
           <p>A more detailed breakdown for the correlation between production and pricing by individual country. Any directional pattern between the light and dark coloured dots indicates a relationship between price and oil production for that country.
           </p>
 
-          <p>While this information may be useful, it is difficult to tell which element is the key driver of change. There are a plethora of other variables to be considered, such as geopolitics, conflicts, a</p>
+          <p>
+            Overall, there appears to be a positive correlation between production and consumption in most countries across the years. However, there are countries that have decreased their oil production over time for reasons such as political instability, decline in oil fields and sanctions.
+          </p>
+
+          <p>While this information may be useful, it is difficult to tell which element is the key driver of change. There are a plethora of other variables to be considered, such as geopolitics, conflicts, market manipulation, natural growth in oil consumption and available reserves.</p>
         </div>
       </div>
       <div class="pure-u-3-4">
@@ -183,34 +226,18 @@
   </div> <!-- end page -->
 
   <script type="text/javascript">
-    var specVis1 = "js/daily_cost_bar_chart.json";
-    var specVis2 = "js/new.json";
-    var specVis3 = "js/choropleth.json"
-    var specVis4 = "js/choropleth2.json"
-    var specVis5 = "js/scatter_plot.json"
-    var specVis5 = "js/stacked_area.json"
-    var specVis6 = "js/interactive.json"
-    var specVis7 = "js/biggest_producers_bar.json"
-    var specVis8 = "js/scatter_prod_cons_countries.json"
-    var specVis9 = "js/price_to_production.json"
-    var specVis10 = "js/dotplot.json"
+    var specVis1 = "js/line_chart_production.json";
+    var specVis4 = "js/choropleth.json"
+    var specVis6 = "js/interactive_stacked_area_and_line.json"
+    var specVis7 = "js/bar_charts_production_consumption.json"
+    var specVis8 = "js/scatter_production_consumption.json"
+    var specVis9 = "js/scatter_price_production.json"
+    var specVis10 = "js/proportion_and_line_oil_production.json"
 
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
 
-    vegaEmbed('#vis2', specVis2, { "actions": false }).then(function (result) {
-      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-    }).catch(console.error);
-
-    vegaEmbed('#vis3', specVis3, { "actions": false }).then(function (result) {
-      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-    }).catch(console.error);
-
     vegaEmbed('#vis4', specVis4, { "actions": false }).then(function (result) {
-      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-    }).catch(console.error);
-
-    vegaEmbed('#vis5', specVis5, { "actions": false }).then(function (result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
 
